tests/run-pass/empty-string.rs
#![feature(plugin)]
#![plugin(indoc)]

fn main() {
    let indoc = indoc!("");
    let expected = "";
    assert_eq!(indoc, expected);
}
